# JUICE-Project

./: .gitignore  CMakeLists.txt  README.md  team8_project.jucer
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
